--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "react-geocode": "^0.2.1",
     "react-google-autocomplete": "^1.2.6",
     "react-google-maps": "^9.4.5",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.1.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
